--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Pygments==2.11.2
 pyparsing==3.0.7
 pytz==2021.3
 requests==2.27.1
+recommonmark
 snowballstemmer==2.2.0
 Sphinx==4.4.0
 sphinxcontrib-applehelp==1.0.2
