--- a/.gitignore
+++ b/.gitignore
@@ -132,14 +132,15 @@ dmypy.json
 main-bk*
 logs/
 ../geod/jplg*
-../geod/usno*
+../geod/*
 geod/jplg*
 geod/usno*
 cookies*
 ra*
 b*/
 B*/
-eg*
-rg*
+e*/
+r*/
 *_input.py
 *inputs.py
+./*/*
